# dvm

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .mvconfig.json  Cargo.toml  LICENSE  README.md  build.rs  check_project.sh  crates.js  rustfmt.toml  search-index.js  settings.html  source-files.js
.build/: Dockerfile  debug.Dockerfile
.github/: docs-index.html
api/: Cargo.toml
cli/: Cargo.toml
cli/src/: config.rs  info_service.rs  lib.rs  logging.rs
compiler/: Cargo.toml  README.md
compiler/resources/: default_module.move  default_script.move
compiler/src/: lib.rs  manifest.rs
compiler/src/cmd/: build.rs  check.rs  init.rs  mod.rs  new.rs  update.rs
compiler/src/compiler/: bech32.rs  builder.rs  disassembler.rs  mod.rs  preprocessor.rs
compiler/src/compiler/dependence/: extractor.rs  loader.rs
compiler/src/embedded/: ds_loader.rs  mod.rs
compiler/src/mv/: bech32.rs  builder.rs  disassembler.rs  disassembler1.rs  mod.rs  preprocessor.rs
compiler/src/mv/dependence/: extractor.rs  loader.rs  mod.rs
compiler/src/mv/disassembler/: functions.rs  generics.rs  imports.rs  mod.rs  module.rs  script.rs  structs.rs  types.rs  unit.rs
compiler/src/mv/disassembler/assets/: base.move  empty.move  function_sign.move  script.move  struct.move  tx.move
compiler/src/mv/disassembler/assets/code/: abort.move  arithmetic.move  call.move  fake_native.move  if.move  let.move  loc.move  loop.move  pack.move  unpack.move  values.move  while.move
compiler/src/mv/disassembler/assets/code/if/: i1.move  i1_res.move
compiler/src/mv/disassembler/code/: body.rs  exp.rs  iter.rs  locals.rs  mod.rs  translator.rs
compiler/src/mv/disassembler/code/exp/: block.rs  cast.rs  function.rs  ld.rs  loc.rs  lt.rs  mod.rs  operators.rs  pack.rs  ret.rs  rf.rs  unpack.rs
compiler/src/mv/disassembler/code/exp/branching/: algorithms.rs  mod.rs
compiler/tests/: compiler.rs  test_bech32_utils.rs
compiler/tests/resources/disassembler/: empty_module.move  empty_module_dis.move  module_with_functions.move  module_with_functions_dis.move  module_with_structs.move  module_with_structs_dis.move
data-source/: Cargo.toml
data-source/src/: blacklist.rs  grpc.rs  lib.rs  metrics.rs  mock.rs  module_cache.rs  wrappers.rs
data-source/tests/: grpc.rs
dvm/: all.html  fn.main.html  fn.main_internal.html  index.html  sidebar-items.js  struct.Options.html
dvm_cli/: all.html  fn.init.html  fn.init_sigterm_handler.html  fn.init_sigterm_handler_fut.html  index.html  macro.version!.html  macro.version.html  sidebar-items.js
dvm_compiler/: all.html  fn.compile.html  index.html  sidebar-items.js  struct.Compiler.html
dvm_data_source/: all.html  index.html  sidebar-items.js  trait.Balance.html  (+5 more)
info/: Cargo.toml
info/src/: config.rs  heartbeat.rs  lib.rs  memory_check.rs  task.rs  web.rs
info/src/metrics/: collector.rs  execution.rs  live_time.rs  meter.rs  metric.rs  mod.rs  prometheus.rs
lang/: Cargo.toml
lang/src/: banch32.rs  lib.rs  module_checker.rs  stdlib.rs
lang/src/bytecode/: disassembler.rs  metadata.rs  mod.rs
lang/src/bytecode/verification/: bytecode.rs  whitelist.rs
lang/src/compiler/: imports.rs  meta.rs  mod.rs  module_loader.rs  mv.rs  mvir.rs  name_pull.rs  preprocessor.rs
lang/src/compiler/mv/: dependency.rs  imports.rs  mod.rs  name_pull.rs
lang/stdlib/: account.move  account.mvir  block.move  coins.move  compare.move  debug.move  dfi.move  dfinance.move  event.move  fixedpoint32.move  lcs.move  offer.move  oracle.move  oracle.mvir  signature.move  time.move  transaction.move  vector.move
lang/tests/: compiler.rs  metadata.rs  test_bech32_utils.rs
lang/tests/resources/: account.mvir  dbg.mvir  empty.move  module_coin.mvir  oracle.move  transaction_fee_distribution.move
lang/tests/resources/disassembler/: base.move  base_1.move  empty_module_dis.move  module_with_functions.move  module_with_functions_dis.move  module_with_structs.move  module_with_structs_dis.move
lang/tests/resources/move_to_mvir/: c.mvir  c_wrapper.move  r.move  r_wrapper.move  s.mvir  s_wrapper.move
libra/: Cargo.toml
libra/src/: lib.rs
load-generator/: Cargo.toml
load-generator/assets/templates/: load_script.move  module.move  store_script.move
load-generator/src/: ds.rs  info_service.rs  lib.rs  log.rs  watcher.rs
load-generator/src/dvm/: args.rs  client.rs  mod.rs
load-generator/src/tester/: mod.rs  mv_template.rs  pipeline.rs  stat.rs
net/: Cargo.toml
net/src/: endpoint.rs  lib.rs  serve.rs  unix.rs  win.rs
net/tests/: full.rs  smoke.rs
runtime/: Cargo.toml
runtime/src/: gas_schedule.rs  lib.rs  move_vm.rs  resources.rs
runtime/src/vm/: dvm.rs  mod.rs  session.rs  types.rs
runtime/tests/: vm.rs
services/: Cargo.toml
services/src/: compiler.rs  lib.rs  metadata.rs  vm.rs
services/tests/: compiler.rs  metadata.rs  test_metadata.rs
stdlib/: Cargo.toml  all.html  fn.build_external_std.html  fn.build_std.html  fn.zero_std.html  index.html  lib.rs  sidebar-items.js  struct.Stdlib.html  struct.Value.html  struct.Ws.html
stdlib/modules/: account.move  coins.move  dfinance.move  event.move  fixedpoint32.move  math.move  offer.move  security.move  time.move  token.move  vector.move
stdlib/mvir/: account.mvir  coins.mvir  dbg.mvir  oracle.mvir  wb_account.mvir  wb_accout.mvir  wb_coins.mvir
stdlib/tests/base/: publish_module.move  test_execution_result.move  write_set.move
stdlib/tests/stdlib/: block.move  coins.move  oracle.move  test_math_add.move  test_math_div.move  test_math_mul.move  test_math_subtract.move  time.move  u256.move
test-kit/: Cargo.toml
test-kit/benches/: benchmark.rs
test-kit/benches/assets/: bench_sample.move
test-kit/resources/: genesis.json
test-kit/src/: genesis.rs  grpc_client.rs  grpc_server.rs  lib.rs
test-kit/src/test_suite/: mod.rs  pipeline.rs  runner.rs
test-kit/tests/: api.rs  native_functions.rs  vm_tests.rs
test-kit/tests/resources/: account.move  balance.move  currency.move  currency_info.move  dfinance.move  event.move  event_proxy.move  module_coin.mvir  store.move  transaction.move
(+1308 files in other folders)
