[package]
name = "move-vm-in-cosmos"
version = "0.0.1"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"

build = "src/build.rs"

[dependencies]
move-lang = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
libra-crypto = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
vm-runtime-types = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
language-e2e-tests = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
vm = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
vm-cache-map = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
vm-runtime = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
libra-state-view = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
libra-config = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
libra-types = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
move-ir-types = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
stdlib = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
bytecode-verifier = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
lcs = { git = "https://github.com/dfinance/libra.git", package = "libra-canonical-serialization", branch = "rename-account" }
compiler = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
libra-logger = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
ir-to-bytecode = { git = "https://github.com/dfinance/libra.git", branch = "rename-account" }
anyhow = "=1.0.27"
lazy_static = "=1.4.0"
hex = "=0.4.2"
slog = "=2.5.2"
once_cell = "=1.3.1"

tonic = "=0.1.1"
prost = "=0.6"
prost-types = "=0.6"
tokio = { version = "=0.2", features = [ "macros", "rt-core", "rt-threaded", "blocking", "full" ] }
futures = { version = "=0.3.4", features = ["async-await"] }
futures-core = "=0.3.4"
serde = "=1.0.104"
serde_json = "=1.0.48"
byteorder = "=1.3.4"

structopt = "=0.3.11"
http = "=0.2.0"
maplit = "=1.0.2"
regex = "=1.3.5"
bech32 = "=0.7.2"
slice_as_array = "=1.1.0"

[build-dependencies]
tonic-build = "=0.1.1"
