[workspace]
members = [
    "api/rust",
    "test-kit",
]


[package]
name = "move-vm-in-cosmos"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"


[dependencies]
dvm-api = { git = "https://github.com/dfinance/dvm-proto.git", branch = "feature-pregenerated-rust-code" }

move-lang = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
libra-crypto = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
vm-runtime-types = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
language-e2e-tests = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
vm = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
vm-cache-map = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
vm-runtime = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
libra-state-view = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
libra-config = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
libra-types = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
move-ir-types = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
stdlib = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
bytecode-verifier = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
lcs = { git = "https://github.com/dfinance/libra.git", package = "libra-canonical-serialization", branch = "14.02.2020" }
compiler = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
libra-logger = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
ir-to-bytecode = { git = "https://github.com/dfinance/libra.git", branch = "14.02.2020" }
anyhow = "=1.0.27"
lazy_static = "=1.4.0"
hex = "=0.4.2"
slog = "=2.5.2"
once_cell = "=1.3.1"

# TODO: use reshared by dvm-api
tonic = "=0.1.1"

tokio = { version = "=0.2", features = [ "macros", "rt-core", "rt-threaded", "blocking", "full" ] }
futures = { version = "=0.3.4", features = ["async-await"] }
futures-core = "=0.3.4"
serde = "=1.0.104"
serde_json = "=1.0.48"
byteorder = "=1.3.4"

structopt = "=0.3.11"
http = "=0.2.0"
maplit = "=1.0.2"
regex = "=1.3.5"
bech32 = "=0.7.2"
slice_as_array = "=1.1.0"


[dev-dependencies]
dvm-test-kit = { path = "test-kit" }
