[workspace]
members = [
    "libra",
    "test-kit",
    "lang",
    "data-source",
]


[package]
name = "dvm"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"


[dependencies]
dvm-api = { git = "https://github.com/dfinance/dvm-proto.git", branch = "rename-error-status" }
libra = { path = "libra", package = "dvm-libra-deps" }
lang = { path = "lang", package = "dvm-lang" }
data_source = { path = "data-source", package = "dvm-data-source" }

anyhow = "=1.0.27"
lazy_static = "=1.4.0"
hex = "=0.4.2"
log = "0.4.8"
env_logger = "0.7.1"
# slog = "=2.5.2"
once_cell = "=1.3.1"

tokio = { version = "=0.2", features = [ "macros", "rt-core", "rt-threaded", "blocking", "full" ] }
futures = { version = "=0.3.4", features = ["async-await"] }
futures-core = "=0.3.4"
serde = "=1.0.104"
serde_json = "=1.0.48"
byteorder = "=1.3.4"

structopt = "=0.3.11"
http = "=0.2.0"
maplit = "=1.0.2"
regex = "=1.3.5"
bech32 = "=0.7.2"
slice_as_array = "=1.1.0"

[dependencies.sentry]
 version = "=0.18.0"
 optional = true
 features = [
     "with_log",
     "with_env_logger",
     "with_panic"
 ]


[dev-dependencies]
dvm-test-kit = { path = "test-kit" }


[features]
default = [ "sentry" ]
