[package]
name = "dvm-cli"
version = "0.2.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"

[dependencies]
lang = { path = "../lang", package = "dvm-lang" }
data_source = { path = "../data-source", package = "dvm-data-source" }
services = { path = "../services", package = "dvm-services" }
libra = { path = "../libra", package = "dvm-libra-deps" }
dvm-api = { git = "https://github.com/dfinance/dvm-proto.git", branch = "master" }

anyhow = "=1.0.27"
log = "0.4.8"
env_logger = "0.7.1"
structopt = "0.3.13"
http = "=0.2.0"
tokio = { version = "=0.2", features = [ "macros", "rt-core", "rt-threaded", "blocking", "full" ] }
serde = "=1.0.106"
serde_json = "1.0.51"

[dependencies.sentry]
version = "=0.18.0"
optional = true
features = [
    "with_log",
    "with_env_logger",
    "with_panic",
    # "with_debug_to_log"
]

[features]
default = [ "sentry" ]
