[package]
name = "dvm-cli"
version = "0.6.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"


[dependencies]
lang = { path = "../lang", package = "dvm-lang" }
data_source = { path = "../data-source", package = "dvm-data-source" }
services = { path = "../services", package = "dvm-services" }
libra = { path = "../libra", package = "dvm-libra-deps" }
compiler = { path = "../compiler", package = "dvm-compiler" }
dvm-net = { path = "../net" }
dvm-info = { path = "../info" }

anyhow = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
clap = "3.0.0-beta.1"
http = "0.2"
tokio = { version = "0.2", features = [ "macros", "rt-core", "rt-threaded", "blocking", "full", "time" ] }
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
enum-iterator = "0.6.0"
signal-notify = "0.1.3"

[dependencies.sentry]
version = "0.18"
optional = true
features = [
    "with_log",
    "with_env_logger",
    "with_panic",
    # "with_debug_to_log"
]

[features]
default = [ "sentry" ]
integrity-tests = [ "sentry", "sentry/with_test_support" ]
