[package]
name = "dvm-compiler"
version = "0.2.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"


[dependencies]
libra = { path = "../libra", package = "dvm-libra-deps" }
structopt = "0.3"
http = "0.2"
toml = "0.5"
anyhow = "1.0"
lazy_static = "1.4.0"
bech32 = "0.7.2"
regex = "1.3.7"
twox-hash = "1.5.0"
once_cell = "1.4.0"
hex = "0.4.2"
walkdir = "2.3.1"
tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }
rand = "0.7.3"
log = "0.4.8"
termcolor = "1.1.0"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
itertools = "0.9.0"

[dependencies.serde]
version = "1.0"
features = [
    "default",
    "derive",
    "rc", # for Rc & Arc
    "alloc", # used for Box, Vec, and Cow
    "std", # for HashMap & HashSet
]

[dev-dependencies]
ds = { path = "../data-source", package = "dvm-data-source" }
