[package]
name = "dvm-data-source"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"

[dependencies]
libra = { path = "../libra", package = "dvm-libra-deps" }
anyhow = "=1.0.27"
