[package]
name = "dvm-data-source"
version = "0.2.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"


[dependencies]
libra = { path = "../libra" }
dvm-net = { path = "../net"}
dvm-info = { path = "../info" }

anyhow = "1.0"
crossbeam = "0.7.3"
http = "0.2"
tokio = { version = "0.2", features = [ "macros", "rt-core", "rt-threaded", "blocking", "full" ] }
log = "0.4.8"
