[package]
name = "dvm-info"
version = "0.2.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"


[dependencies]
dvm-net = { path = "../net" }
once_cell = "1.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sysinfo = "0.3.6"
palaver = "0.2.8"
log = "0.4.8"
anyhow = "1.0"
hyper = "0.13.6"
futures-util = "0.3.5"
bytes = "0.5.4"
tokio = { version = "0.2", features = [ "macros", "rt-core", "rt-threaded", "blocking", "full" ] }
prometheus_exporter_base = "0.30.4"
clap = "3.0.0-beta.1"
sys-info = "0.7.0"
