[package]
name = "dvm-lang"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"

[dependencies]
libra = { path = "../libra", package = "dvm-libra-deps" }
ds = { path = "../data-source", package = "dvm-data-source" }
anyhow = "=1.0.27"
lazy_static = "=1.4.0"
bech32 = "=0.7.2"
regex = "=1.3.5"
lru = "0.4.3"
codespan = "0.5.0"
serde = "=1.0.104"
serde_json = "=1.0.48"
hex = "=0.4.2"
maplit = "=1.0.2"
once_cell = "=1.3.1"
twox-hash = "1.5.0"

