[package]
name = "dvm-lang"
version = "0.2.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"


[dependencies]
libra = { path = "../libra", package = "dvm-libra-deps" }
compiler = { path = "../compiler", package = "dvm-compiler" }
ds = { path = "../data-source", package = "dvm-data-source" }
anyhow = "1.0"
lazy_static = "1.4.0"
bech32 = "0.7.2"
regex = "1.3.7"
lru = "0.4.3"
codespan = "0.9"
serde = "1.0"
serde_json = "1.0"
hex = "=0.4.2"
maplit = "1.0.2"
once_cell = "1.4.0"
include_dir = "0.6"
rand = "0.7.3"
