[package]
name = "dvm-libra-deps"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"

[dependencies]
move-lang = { git = "https://github.com/dfinance/libra.git", branch = "feature-DFI-733" }
move-vm-types = { git = "https://github.com/dfinance/libra.git", branch = "feature-DFI-733" }
move-core-types = { git = "https://github.com/dfinance/libra.git", branch = "feature-DFI-733" }
libra-state-view = { git = "https://github.com/dfinance/libra.git", branch = "feature-DFI-733" }
libra-types = { git = "https://github.com/dfinance/libra.git", branch = "feature-DFI-733" }
lcs = { git = "https://github.com/dfinance/libra.git", package = "libra-canonical-serialization", branch = "feature-DFI-733" }
compiler = { git = "https://github.com/dfinance/libra.git", branch = "feature-DFI-733" }
libra-logger = { git = "https://github.com/dfinance/libra.git", branch = "feature-DFI-733" }
vm = { git = "https://github.com/dfinance/libra.git", branch = "feature-DFI-733" }
libra-vm = { git = "https://github.com/dfinance/libra.git", branch = "feature-DFI-733" }
move-vm-runtime = { git = "https://github.com/dfinance/libra.git", branch = "feature-DFI-733" }
move-vm-natives = { git = "https://github.com/dfinance/libra.git", branch = "feature-DFI-733" }
bytecode-verifier = { git = "https://github.com/dfinance/libra.git", branch = "feature-DFI-733" }
