[package]
name = "libra"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"

[dependencies]
libra-inner = { package = "libra", git = "https://github.com/dfinance/move-tools.git", branch = "restructuring-refactoring"}
