[package]
name = "dvm-libra-deps"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
]
edition = "2018"

[dependencies]
move-lang = { git = "https://github.com/dfinance/libra.git", branch = "release-1.0", features = ["dfinance_address"] }
move-vm-types = { git = "https://github.com/dfinance/libra.git", branch = "release-1.0", features = ["dfinance_address"] }
move-core-types = { git = "https://github.com/dfinance/libra.git", branch = "release-1.0", features = ["dfinance_address"] }
libra-state-view = { git = "https://github.com/dfinance/libra.git", branch = "release-1.0", features = ["dfinance_address"] }
libra-types = { git = "https://github.com/dfinance/libra.git", branch = "release-1.0", features = ["dfinance_address"] }
lcs = { git = "https://github.com/dfinance/libra.git", package = "libra-canonical-serialization", branch = "release-1.0" }
compiler = { git = "https://github.com/dfinance/libra.git", branch = "release-1.0", features = ["dfinance_address"] }
libra-logger = { git = "https://github.com/dfinance/libra.git", branch = "release-1.0" }
vm = { git = "https://github.com/dfinance/libra.git", branch = "release-1.0", features = ["dfinance_address"] }
libra-vm = { git = "https://github.com/dfinance/libra.git", branch = "release-1.0", features = ["dfinance_address"] }
move-vm-runtime = { git = "https://github.com/dfinance/libra.git", branch = "release-1.0", features = ["dfinance_address"] }
move-vm-natives = { git = "https://github.com/dfinance/libra.git", branch = "release-1.0", features = ["dfinance_address"] }
bytecode-verifier = { git = "https://github.com/dfinance/libra.git", branch = "release-1.0", features = ["dfinance_address"] }
