[package]
name = "dvm-runtime"
version = "0.2.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"


[dependencies]
libra = { path = "../libra", package = "dvm-libra-deps" }
ds = { path = "../data-source", package = "dvm-data-source" }
lang = { path = "../lang", package = "dvm-lang" }
compiler = { path = "../compiler", package = "dvm-compiler" }
once_cell = "1.4.0"
log = "0.4.8"
anyhow = "1.0"
hex = "=0.4.2"
serde = "=1.0.117"
serde_derive = "1.0.117"
byteorder = "1.3.4"
dvm-info = { path = "../info" }
