[package]
name = "dvm-services"
version = "0.2.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"

[dependencies]
dvm-api = { git = "https://github.com/dfinance/dvm-proto.git", branch = "master" }
libra = { path = "../libra", package = "dvm-libra-deps" }
lang = { path = "../lang", package = "dvm-lang" }
data_source = { path = "../data-source", package = "dvm-data-source" }
runtime = { path = "../runtime", package = "dvm-runtime" }
compiler = { path = "../compiler", package = "dvm-compiler" }
anyhow = "1.0.27"
hex = "=0.4.2"

[dev-dependencies]
tokio = { version = "=0.2", features = [ "macros", "rt-core", "rt-threaded", "blocking", "full" ] }
