[package]
name = "dvm-services"
version = "0.2.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"


[dependencies]
dvm-net = { path = "../net" }
libra = { path = "../libra" }
lang = { path = "../lang", package = "dvm-lang" }
data_source = { path = "../data-source", package = "dvm-data-source" }
runtime = { path = "../runtime", package = "dvm-runtime" }
compiler = { path = "../compiler", package = "dvm-compiler" }
info = { path = "../info", package = "dvm-info" }
byteorder = "1.3.4"
anyhow = "1.0"
hex = "=0.4.2"

[dev-dependencies]
tokio = { version = "0.2", features = [ "macros", "rt-core", "rt-threaded", "blocking", "full" ] }
