[package]
name = "stdlib"
version = "0.2.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>",
    "Damir S <damirka.ru@gmail.com>"
    ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler = { path = "../compiler", package = "dvm-compiler" }
ds = { path = "../data-source", package = "dvm-data-source" }
libra = { path = "../libra", package = "dvm-libra-deps" }
anyhow = "1.0"
hex = "0.4.2"
include_dir = "0.6"
serde = "1.0"

[lib]
name = "stdlib"
path = "lib.rs"
