[package]
name = "dvm-stdlib"
version = "0.2.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Damir S <damirka.ru@gmail.com>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler = { path = "../compiler", package = "dvm-compiler" }
ds = { path = "../data-source", package = "dvm-data-source" }
libra = { path = "../libra", package = "dvm-libra-deps" }
anyhow = "1.0"
hex = "0.4.2"
include_dir = "0.6"
serde = "1.0"
[dev-dependencies]
test-kit = {path = "../test-kit", package = "dvm-test-kit"}
include_dir = "0.6"

[lib]
name = "stdlib"
path = "lib.rs"
