[package]
name = "dvm-test-kit"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"


[dependencies]
dvm-net = { path = "../net" }
libra = { path = "../libra", package = "dvm-libra-deps" }
data_source = { path = "../data-source", package = "dvm-data-source" }
compiler = { path = "../compiler", package = "dvm-compiler" }
lang = { path = "../lang", package = "dvm-lang" }
services = { path = "../services", package = "dvm-services" }
runtime = { path = "../runtime", package = "dvm-runtime" }
anyhow = "1.0"
tokio = { version = "0.2", features = [ "macros", "rt-core", "rt-threaded", "blocking", "full" ] }
futures = { version = "0.3.5", features = ["async-await"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hex = "=0.4.2"
byteorder = "1.3.4"
twox-hash = "1.5.0"

