[package]
name = "dvm-test-kit"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
    ]
edition = "2018"


[dependencies]
dvm-net = { path = "../net" }
libra = { path = "../libra" }
data_source = { path = "../data-source", package = "dvm-data-source" }
compiler = { path = "../compiler", package = "dvm-compiler" }
lang = { path = "../lang", package = "dvm-lang" }
services = { path = "../services", package = "dvm-services" }
runtime = { path = "../runtime", package = "dvm-runtime" }
anyhow = "1.0"
tokio = { version = "0.2", features = [ "macros", "rt-core", "rt-threaded", "blocking", "full" ] }
futures = { version = "0.3.5", features = ["async-await"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
hex = "=0.4.2"
byteorder = "1.3.4"
regex = "1.3.7"
lazy_static = "1.4.0"
chrono = "0.4.11"
termion = "1.5.5"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "benchmark"
harness = false
